# cuprate

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cuprated.toml  LICENSE  LICENSE-MIT  LICENSE.md  README.md  SCRATCHPAD.txt  SECURITY.md  clippy.toml  deny.toml  lychee.toml  p2p_store  readme.md  rustfmt.toml  typos.toml
benches/cuprate-json-rpc/: Cargo.toml
benches/cuprate-json-rpc/benches/: response.rs
benches/cuprate-json-rpc/src/: method.rs
benches/harness/: Cargo.toml
benches/harness/harness-test/: Cargo.toml
benches/harness/lib/: Cargo.toml
benches/harness/src/: main.rs
binaries/changelog/: Cargo.toml  README.md
binaries/changelog/src/: api.rs  changelog.rs  cli.rs  crates.rs  free.rs  main.rs
binaries/cuprated/: Cargo.toml  Cuprated.toml  Dockerfile  README.md  build.rs  cuprated.service
binaries/cuprated/config/: 0.0.1.toml  Cuprated.toml  README.md
binaries/cuprated/src/: args.rs  blockchain.rs  commands.rs  config.rs  constants.rs  error.rs  killswitch.rs  lib.rs  logging.rs  main.rs  monitor.rs  network.rs  p2p.rs  p2p_request_handler.rs  rpc.rs  signals.rs  statics.rs  supervisor.rs  syncer.rs  tor.rs  tx_pool.rs  txpool.rs  version.rs
binaries/rpc-compat/: Cargo.toml  README.md
binaries/rpc-compat/src/: cli.rs  main.rs  rpc.rs
blockchain_db/: Cargo.toml  LICENSE
blockchain_db/src/: lib.rs  mdbx.rs  rocksdb.rs
common/: Cargo.toml
common/src/: hardforks.rs  lib.rs  network.rs  pruning.rs  shutdown.rs  tower_utils.rs
consensus/: Cargo.toml  README.md
consensus/context/: Cargo.toml
consensus/context/src/: alt_chains.rs  difficulty.rs  distribution.rs  hardforks.rs  lib.rs  rx_vms.rs  task.rs  tokens.rs  weight.rs
consensus/fast-sync/: Cargo.toml
consensus/fast-sync/proptest-regressions/: fast_sync.txt
consensus/fast-sync/src/: create.rs  fast_sync.rs  lib.rs  util.rs
consensus/rules/: Cargo.toml
consensus/rules/src/: batch_verifier.rs  blocks.rs  decomposed_amount.rs  genesis.rs  hard_forks.rs  lib.rs  miner_tx.rs  signatures.rs  transactions.rs
consensus/src/: batch_verifier.rs  block.rs  context.rs  genesis.rs  hardforks.rs  helper.rs  lib.rs  pow.rs  randomx.rs  rpc.rs  test_utils.rs  tests.rs  transactions.rs  verifier.rs
consensus/src/block/: alt_block.rs  batch_prepare.rs  checks.rs  difficulty.rs  free.rs  hash_worker.rs  miner_tx.rs  pow.rs  reward.rs  weight.rs
consensus/src/context/: alt_chains.rs  difficulty.rs  hardforks.rs  rx_seed.rs  rx_vms.rs  task.rs  tests.rs  tokens.rs  weight.rs
consensus/src/pow/: difficulty.rs
consensus/src/rpc/: cache.rs  connection.rs  discover.rs
consensus/src/test_utils/: mock_db.rs
consensus/src/tests/: context.rs  mock_db.rs
consensus/src/transactions/: contextual_data.rs  free.rs  (+7 more)
consensus/tests/: verify_correct_txs.rs
constants/: Cargo.toml  README.md  build.rs
constants/src/: block.rs  build.rs  cryptonote.rs  difficulty.rs  genesis.rs  hard_fork.rs  lib.rs  macros.rs  money.rs  net.rs  output.rs  p2p.rs  pruning.rs  rpc.rs  sys.rs  tx.rs
crypto/ringct/: Cargo.toml
cryptonight/: Cargo.toml  build.rs
cryptonight/c/: aesb.c  blake256.c  blake256.h  hash-ops.h  hash.c  hash.h  jh.c  oaes_lib.c  skein_port.h  slow-hash.c  variant2_int_sqrt.h  variant4_random_math.h
cryptonight/src/: blake256.rs  cnaes.rs  hash.rs  hash_v2.rs  hash_v4.rs  lib.rs  main.rs  slow_hash.rs  util.rs  variant2_int_sqrt.rs
cuprate/: Cargo.toml  README.md  build.rs
cuprate/src/: application.rs  cli.rs  commands.rs  config.rs  constants.rs  docs.rs  lib.rs  macros.rs  main.rs
cuprate/tests/: acceptance.rs
database/: Cargo.toml  LICENSE  README.md  SCHEMA.md
database/benchmark/: Cargo.toml  README.md
database/reactor/: Cargo.toml
database/src/: config.rs  constants.rs  database.rs  db.rs  encoding.rs  env.rs  error.rs  free.rs  gist.rs  hse.rs  interface.rs  key.rs  lib.rs  macros.rs  mdbx.rs  monero.rs  never.rs  old_mdbx.rs  pod.rs  resize.rs  slice.rs  storable.rs  storable_slice.rs  table.rs  tables.rs  tests.rs  to_owned_debug.rs  transaction.rs  types.rs  unsafe_sendable.rs  value_guard.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cryptonight.rs  epee_encoding.rs  epee_p2p_messages.rs  levin_codec.rs  oxide_block.rs  oxide_tx.rs
helper/: Cargo.toml  README.md  build.rs
helper/src/: asynch.rs  atomic.rs  cast.rs  commitment.rs  constants.rs  crypto.rs  fmt.rs  fs.rs  lib.rs  map.rs  net.rs  network.rs  num.rs  sys.rs  thread.rs  time.rs  timeout.rs  tx.rs  tx_utils.rs
json-rpc/: Cargo.toml
json-rpc/src/: id.rs  key.rs  lib.rs  request.rs  response.rs  version.rs
net/epee-encoding/: Cargo.toml  LICENSE  README.md
net/fixed-bytes/: Cargo.toml
p2p/: Cargo.toml
p2p/address-book/: Cargo.toml
p2p/async-buffer/: Cargo.toml
p2p/bucket/: Cargo.toml
p2p/cuprate-p2p/: Cargo.toml
p2p/dandelion/: Cargo.toml
p2p/dandelion-tower/: Cargo.toml
p2p/monero-p2p/: Cargo.toml
p2p/monero-peer/: Cargo.toml
p2p/p2p/: Cargo.toml
p2p/p2p-core/: Cargo.toml
p2p/p2p-transport/: Cargo.toml
p2p/peer/: Cargo.toml
p2p/protocol/: Cargo.toml
p2p/src/: address_book.rs  config.rs  connection_counter.rs  connection_handle.rs  connection_tracker.rs  constants.rs  lib.rs  peer.rs  peer_set.rs  protocol.rs  state_machine.rs
p2p/sync-states/: Cargo.toml
p2p/tests/: conn.rs
power/: Cargo.toml
power/src/: challenge.rs  constants.rs  free.rs  lib.rs  p2p.rs  rpc.rs  tests.rs
pruning/: Cargo.toml
pruning/src/: lib.rs
random-x/: Cargo.toml
random-x/src/: aes_hash.rs  blake2_generator.rs  config.rs  dataset.rs  lib.rs  registers.rs  superscalar.rs
test-utils/: Cargo.toml  README.MD  README.md
test-utils/src/: lib.rs  monerod.rs  test_netzone.rs
types/: Cargo.toml  README.md
types/fixed-bytes/: Cargo.toml  README.md
types/hex/: Cargo.toml  README.md
types/src/: address_type.rs  block_complete_entry.rs  blockchain.rs  connection_state.rs  extended_block_header.rs  hard_fork.rs  hex.rs  lib.rs  output_cache.rs  pool_info.rs  rpc.rs  service.rs  transaction_verification_data.rs  types.rs
types/types/: Cargo.toml  README.md
(+1310 files in other folders)
