[package]
name = "cuprate-db"
version = "0.0.1"
edition = "2021"
rust-version = "1.67.0"
license = "AGPL-3.0-only"

# All Contributors on github
authors=[
        "SyntheticBird45 <@someoneelse495495:matrix.org>"
        ]

[dependencies]
monero = {workspace = true, features = ['serde']}
serde = { workspace = true}
thiserror = {workspace = true }

libmdbx = "0.3.1"