[package]
name = "cuprate-common"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Boog900"]

[features]
default = []
borsh = ["dep:borsh"]

[dependencies]
chrono = "0.4.24"
thiserror = "1"
hex = "0.4"

futures = "0.3.29"

borsh = {version = "1.2.1", default-features = false, features = ["derive",], optional = true }