[package]
name = "cuprate-common"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Boog900"]

[features]
default = []
borsh = ["dep:borsh"]

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true, features = ["std"] }

futures = { workspace = true, features = ["std"] }

borsh = { workspace = true, features = ["derive", "std"], optional = true }