[package]
name        = "cuprate-constants"
version     = "0.1.0"
edition     = "2021"
description = "Constant/static data used throughout Cuprate"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/constants"
keywords    = ["cuprate", "constants"]

[features]
default = []
block   = []
build   = []
genesis = ["dep:monero-serai", "dep:hex-literal", "dep:paste"]
rpc     = []

[dependencies]
cfg-if       = { workspace = true }
monero-serai = { workspace = true, optional = true }
hex-literal  = { workspace = true, optional = true }
paste        = { workspace = true, optional = true }

[dev-dependencies]
monero-serai      = { workspace = true }
hex               = { workspace = true, features = ["std"] }
pretty_assertions = { workspace = true }

[lints]
workspace = true