[package]
name = "cuprate-cryptonight"
version = "0.1.0"
edition = "2021"
description = "A wrapper around Monero's CryptoNight hash function."
license = "MIT"
authors = ["Boog900", "The Monero Project"]
repository = "https://github.com/Cuprate/cuprate/tree/main/cryptonight"

[dependencies]
thiserror = "1"
sha3 = "0.11.0-pre.3"
static_assertions = "1.1.0"
memoffset = "0.9.1"
byteorder = "1.5.0"
blake = "2.0.2"
hex = "0.4.3"
rand = "0.9.0-alpha.2"
groestl = "0.10.1"
skein = "0.1.0"
jh = "0.1.0"

[build-dependencies]
cc = "1"

[dev-dependencies]
hex = "0.4"
