[package]
name = "cuprate-cryptonight"
version = "0.1.0"
edition = "2024"
description = "A wrapper around Monero's CryptoNight hash function."
license = "MIT"
authors = ["dimalinux", "Boog900", "The Monero Project"]
repository = "https://github.com/Cuprate/cuprate/tree/main/cryptonight"

[dependencies]
thiserror = { workspace = true }
sha3 = "0.10.8"
groestl = "0.10.1"
skein = "0.1.0"
jh = "0.1.0"
keccak = "0.1.5"
digest = "0.10.7"
seq-macro = "0.3.5"

[dev-dependencies]
hex = { workspace = true, features = ["std"] }

[lints]
workspace = true
